@@ -1,3 +1,8 @@
+2004-06-22  Lutz Mueller <lutz@users.sourceforge.net>
+
+	* libexif/olympus/mnote-olympus-tag.[c,h]: New tags discovered by
+	  Serge Droz <serge.droz@psi.ch>.
+
 2004-06-15  Jan Patera <patera@users.sourceforge.net>
 
 	* libexif/olympus/mnote-olympus-entry.c: MNOTE_OLYMPUS_TAG_INFO
